# contex

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
.trae/: mcp.json  project_rules.md
.trae/documents/: Implement Configuration Management System.md  Implement Real Docker Support Code & Tauri Scaffolding.md  Stage 1 MVP Completion & Verification Plan.md  Stage 1 产品化开发计划.md  Stage 1 架构深化与重构计划.md  Verify MVP Implementation Status.md  Verify MVP Plan and Implement Structured Logging.md  容器化 Agent 最小化包体优化计划.md
apps/desktop/: package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/pages/: Dashboard.tsx  Settings.tsx
apps/gateway/: main.py
apps/sidecar/: requirements.txt
apps/sidecar/api/: main.py
apps/sidecar/core/: config.py  docker_client.py  logger.py
docs/: MVP 版本用户手册.md  MVP-User-Manual.md  MVP_计划.md  Stage1-每日简报需求架构实现文档.md  Stage1版本用户手册.md  产品需求文档.md  技术设计文档.md  最小化容器化包体方案.md
scripts/: build_brain.sh  debug_docker.py  e2e_test_mvp.py  project_context_mcp.py  test_config_management.py  test_gateway_flow.py  test_sidecar.py  verify_current_features.py  verify_deep_programming.py  verify_mvp.py  verify_mvp_full.py
