[package]
name = "contex-desktop"
version = "0.1.0"
description = "Contex Desktop Client"
authors = ["Contex Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
